# VC-Assignment-2

./: .gitignore  CMakeLists.txt  README.md  answers.txt  main.cpp  vcpkg.json  videoTextureShader.vert
OpenGLIntro/OpenGLIntro/: CMakeLists.txt
OpenGLIntro/OpenGLIntro/Part01/: simpleWindow.cpp
OpenGLIntro/OpenGLIntro/Part02/: basicShader.frag  basicShader.vert  redTriangle.cpp  simpleColor.frag  simpleColor.vert
OpenGLIntro/OpenGLIntro/Part03/: sinCityShader.frag  webcamQuad.cpp
OpenGLIntro/OpenGLIntro/common/: ColorShader.cpp  Shader.hpp
OpenGLIntro/__MACOSX/: ._OpenGLIntro
OpenGLIntro/__MACOSX/OpenGLIntro/: ._CMakeLists.txt
OpenGLIntro/__MACOSX/OpenGLIntro/Part02/: ._simpleColor.frag  ._simpleColor.vert
OpenGLIntro/__MACOSX/OpenGLIntro/Part03/: ._videoTextureShader.frag
OpenGLIntro/__MACOSX/OpenGLIntro/common/: ._ColorShader.cpp  ._ColorShader.hpp  ._Quad.cpp  ._Quad.hpp  ._Texture.cpp  ._Texture.hpp  ._TextureShader.cpp  ._TextureShader.hpp
common/: Object.hpp  Scene.cpp  Shader.hpp  Texture.cpp  TextureShader.cpp
enc_temp_folder/d763e1c4fba346151b92d547eb9a7a8/: main.cpp
hpp/: AppUtilities.hpp  Filters.hpp  InputHandler.hpp
src/: App.cpp  AppUtilities.cpp  Calibration.cpp  Experiments.cpp  Filters.cpp  InputHandler.cpp  aruco_samples_utility.hpp  main.cpp  makeCharucoBoard.cpp  task6.cpp  testGLFW.cpp
src/common/: ColorShader.cpp  Scene.cpp  Scene.hpp  Texture.cpp
